Useless Comparison Test. IDEA Clean Up.